kubernetes/apps/media/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media
spec:
  ports:
    - port: 8686
  selector:
    app: lidarr
