kubernetes/apps/media/lidarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: media
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - lidarr.local.elmurphy.com
  rules:
    - backendRefs:
        - name: lidarr
          port: 8686
